# base-data-science-project-setup

./: .env.example  .gitignore  CLAUDE.md  README.md  dvc.yaml  params.yaml  pyproject.toml
config/: __init__.py
constants/: __init__.py  paths.py
docs/: DVC_WORKFLOW.md  PROJECT_OWNER_CHECKLIST.md  SETUP.md  __init__.py
src/: __init__.py
src/app/: __init__.py
src/pipelines/: __init__.py
src/pipelines/data/: bronze_to_silver.py  silver_to_gold.py
src/pipelines/models/: __init__.py
