[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["constants", "src"]

[tool.setuptools.package-data]
"*" = []

[project]
name = "base-data-science-project"
version = "0.1.0"
authors = [
    { name = "Augustin Naton", email = "augustin.naton@gmail.com" },
]
description = "Base project setup for a regular data science project, including DVC, MLflow, and Streamlit integration."
readme = "README.md"
requires-python = ">=3.13,<3.14"


dependencies = [
    "dvc[s3]>=3.66.1",
    "dvc-s3>=3.2.2",
    "loguru>=0.7.3",
    "pandas>=2.3.3",
    "boto3>=1.42.19",
    "mlflow>=3.8.1",
    "dotenv>=0.9.9",
    "openpyxl>=3.1.5",
    "streamlit>=1.53.1",
]


[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
    "nbstripout>=0.8.1",
    "pre-commit>=4.3.0",
    "ruff>=0.14.1",
    "ipywidgets>=8.1.8",
    "scipy>=1.15.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "D",   # pydocstyle (docstring conventions)
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["setup"]
force-sort-within-sections = true
